Fix for issue with UI being hidden by template overflow value

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -23,6 +23,10 @@
 	}
 }
 
+#page-zones__main > .widget.in-editing {
+	overflow: visible;
+}
+
 .w_horizontal_spacing {
 	padding-left: @w-spacing;
 	padding-right: @w-spacing;
